--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "D": "^1.0.0",
+    "prettier": "^3.2.5"
   }
 }
